// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Partials tests renders correctly HeroPartial 1`] = `
<View
  style={
    [
      [
        {
          "flexDirection": "column",
          "paddingHorizontal": 0,
          "paddingTop": 0,
        },
      ],
    ]
  }
>
  <View
    style={
      [
        [
          {
            "height": 100,
            "width": 100,
          },
        ],
        [
          {
            "height": 444.6666666666667,
            "width": "100%",
          },
        ],
      ]
    }
  >
    <Image
      contentFit="cover"
      onError={[Function]}
      onLoadEnd={[Function]}
      onProgress={[Function]}
      source={
        {
          "uri": "https://cdn.minds.com/fs/v1/thumbnail/1273869385403994122/xlarge/",
        }
      }
      style={
        [
          [
            {
              "height": 100,
              "width": 100,
            },
          ],
          [
            {
              "height": 444.6666666666667,
              "width": "100%",
            },
          ],
        ]
      }
    />
  </View>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "display": "flex",
          "flexDirection": "row",
        },
        {
          "padding": 16,
        },
        {
          "borderColor": "#53565A",
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "flex": 1,
            "paddingRight": 10,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "fontSize": 16,
                "fontWeight": "bold",
              },
            ],
          ]
        }
      >
        Wow, what do we call this? It's beautiful, isn't it?
#Nature
      </Text>
      <Text
        style={
          [
            {
              "color": "#F2F2F2",
            },
            {
              "fontFamily": "Roboto_400Regular",
            },
            [
              {
                "paddingTop": 8,
              },
              {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        5
         channels discussing -
         
        1h
      </Text>
    </View>
  </View>
</View>
`;

exports[`Partials tests renders correctly RichPartial 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "display": "flex",
        "flexDirection": "row",
      },
      {
        "padding": 16,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingRight": 10,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#F2F2F2",
          },
          {
            "fontFamily": "Roboto_400Regular",
          },
          [
            {
              "fontSize": 16,
              "fontWeight": "bold",
            },
          ],
        ]
      }
    >
      Wow, what do we call this? It's beautiful, isn't it?
#Nature
    </Text>
    <Text
      style={
        [
          {
            "color": "#F2F2F2",
          },
          {
            "fontFamily": "Roboto_400Regular",
          },
          [
            {
              "paddingTop": 8,
            },
            {
              "color": "#b9bbc0",
            },
          ],
        ]
      }
    >
      5
       channels discussing -
       
      1h
    </Text>
  </View>
  <View
    style={
      [
        [
          {
            "height": 100,
            "width": 100,
          },
        ],
        null,
      ]
    }
  >
    <Image
      contentFit="cover"
      onError={[Function]}
      onLoadEnd={[Function]}
      onProgress={[Function]}
      source={
        {
          "uri": "https://cdn.minds.com/fs/v1/thumbnail/1273869385403994122/xlarge/",
        }
      }
      style={
        [
          [
            {
              "height": 100,
              "width": 100,
            },
          ],
          null,
        ]
      }
    />
  </View>
</View>
`;

exports[`Partials tests renders correctly TrendingHashtagPartial 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "display": "flex",
        "flexDirection": "row",
      },
      {
        "padding": 16,
      },
      {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingRight": 10,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#F2F2F2",
          },
          {
            "fontFamily": "Roboto_400Regular",
          },
          [
            {
              "paddingBottom": 8,
            },
            {
              "color": "#b9bbc0",
            },
          ],
        ]
      }
    >
      Trending 
      9.224444444444444
      h - 
      5
       posts
    </Text>
    <Text
      style={
        [
          {
            "color": "#F2F2F2",
          },
          {
            "fontFamily": "Roboto_400Regular",
          },
          [
            {
              "fontSize": 16,
              "fontWeight": "bold",
            },
          ],
        ]
      }
    >
      #
      nature
    </Text>
  </View>
  <View
    style={
      {
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        [
          {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#a1a5ab",
                "fontSize": 32,
              },
              {
                "backgroundColor": "transparent",
              },
              {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
          testID="iconIcon"
        >
          󰅂
        </Text>
      </View>
    </View>
  </View>
</View>
`;
